# rants

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
src/: codec.rs  lib.rs
src/types/: address.rs  error.rs  parser.rs  refs.rs  tls.rs
tests/: echo.rs  native_tls_connection.rs  request.rs  rustls_tls_connection.rs
tests/certs/: ca.pem  server-crt.pem  server-key.pem
